@@ -24,6 +24,7 @@ GENERAL:
 * class PanAPIConnector | introduce method commitAll() and commitPartial( $user)
 * framework | split README into multiple files to get better introduction
 * framework | introduce new example - improve the example template
+* framework | introduce bash script "create_all_docker_container.sh"
 
 
 2.0.29 (20220204)
